--- a/css/style.css
+++ b/css/style.css
@@ -29,5 +29,31 @@ footer {
 
 main {
     flex-grow: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+
+}
+
+.top {border-top: 3px solid #d2b2f1;}
+.right {border-right: 3px solid #d2b2f1;}
+.bottom {border-bottom: 3px solid #d2b2f1;}
+.left {border-left: 3px solid #d2b2f1;}
+
+.square {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-weight: 700;
+    font-size: 100px;
+    height: 200px;
+    width: 200px;
+}
+
+#gameboard {
+    display: flex;
+    flex-wrap: wrap;
+    width: 600px;
 }
 
